--- a/src/pages/styles/projects.css
+++ b/src/pages/styles/projects.css
@@ -26,7 +26,7 @@
 
 @media (max-width: 600px) {
 	.projects-container {
-		padding-top: 70px;
+		padding-top: 60px;
 	}
 
 	.projects-project {
